[package]
name = "roguelike"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_ecs_tilemap = "0.4.0"
bevycheck = "0.1.0"
env_logger = "0.8"
log = "0.4"
noise = "0.7"
