[package]
name = "dink"
version = "0.7.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_ecs_tilemap = "0.4.0"
bevycheck = "0.1.4"
env_logger = "0.9.0"
log = "0.4.14"
noise = "0.7.0"
rand = "0.8.4"
